--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/assets/styles/main.css">
     <!-- Replace this with the title of the websit -->
     <title>Homepage</title>
+    <!-- this is gurvir -->
 </head>
 <body>
     
